Add compatibility for java 8